vendor/cargo/parameterized-macro-2.0.0/tests/fail/multiple_custom_test_attributes.stderr
error: custom attribute panicked
 --> tests/fail/multiple_custom_test_attributes.rs:3:1
  |
3 | / #[parameterized(
4 | |     v = { 1, 2, 3, },
5 | |     w = { 1, 2, 3, },
6 | | )]
  | |__^
  |
  = help: message: parameterized-macro: the #[parameterized_macro(..)] attribute should not be present more than once!
